# VirtualTherapist

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TROUBLESHOOTING_HE.md  VSCODE_SETUP_HE.md  WINDOWS_SETUP_HE.md  create-test-user.bat  create-test-user.ps1  create_test_user.py  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  setup.cfg  start-backend.bat  start-backend.ps1  start-backend.sh  start-frontend.bat  start-frontend.ps1  start-frontend.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_session_time_and_summary_status.py  003_add_transcript_to_summaries.py  004_add_twin_controls.py  007_add_exercises_table.py  (+44 more)
app/: __init__.py  main.py
docs/: API_GUIDE.md  ARCHITECTURE.md  FRONTEND_GUIDE.md  PRD_MVP_v1.md  SETUP.md  Status.md  VT_AI_Prep_v2_MASTER_SPEC.md  metapel-ai-instruction.md
examples/: example_usage.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: delete_therapist.py  sync_loops_contacts.py  verify_rls.sql
tests/: __init__.py  conftest.py  test_admin_plan.py  test_agent.py  test_ai_cache.py  test_ai_context.py  test_ai_phase2.py  test_ai_phase3.py  test_ai_provider.py  test_ai_router.py  test_daily_view.py  test_greenapi_quota.py  test_message_scheduling.py  test_precompute.py  test_precompute_cache_behavior.py  test_protocols.py  test_security.py  test_session_summary.py  test_session_summary_delete.py  test_summary_tasks_endpoints.py  test_today_insights.py
(+142 files in other folders)
